test/tests/compiler/9_functions/valid/arguments_in_registers/plx1_decls_and_calls.plx
pub fn mult(x: i32, y: i32) i32;
pub fn pow2(x: i32) i32 { 
    return mult(x, x)
}

pub fn mult(x: i32, y: i32) i32 {
    loop i: i32 = x while y > 1 .. y = y - 1 {
        fn add(x: i32, y: i32) i32;   
        x = add(x, i)
    }
    return ? y == 0 then 0 else x
}

pub fn add(x: i32, y: i32) i32 { return x + y }

pub fn main(none) i32 { fn sub(x: i32, y: i32) i32;
    fn div(x: i32, y: i32) i32;
    return sub(mult(pow2(5), 2), mult(5, 10)) }

pub fn sub(x: i32, y: i32) i32 { return add(x, -y) }
pub fn div(x: i32, y: i32) i32;
